test/Execute/SyntaxErrorTest/def_missing_param_colon_type.typh
def addx(x: int {
}

"""stderr
syntax error: $FILE:1:16
  expected ')'

    1 |  def addx(x: int {
                        ^
"""
